layout in index.html done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,58 @@
+
 .site-container {
-    width: 960px;
+    max-width: 960px;
 }
 
-.nav, ul, li {
+.nav-container {
+    background-color: white;
+    width: 100%;
+    padding: 40px 0px;
+    margin-bottom: 30px;
+}
+
+.nav-links, ul, li {
     display: inline;
+    float: right;
+    padding: 0px 0px 0px 10px 
+}
+
+.reorder {
+    float: left;
+}
+
+.logotype {
     float: left;
 }
 
 .self-portrait {
     width: 200px;
     border-radius: 10px;
+}
+
+.main-card {
+    background-color: white;
+    width: 630px;
+    padding: 10px;
+    float: left;
+}
+
+.side-card {
+    background-color: white;
+    width: 260px;
+    padding: 5px;
+    float: right;
+    position: absolute;
+    left: 690px
+}
+
+.social-icon {
+    width: 30.78%;
+    padding: 2px
+}
+
+.footer-container {
+    clear: both;
+    margin-top: 30px;
+    padding: 25px;
+    background-color: lightblue;
 }
