--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,58 +1,203 @@
-
-.site-container {
-    max-width: 960px;
+html {
+    width: 960px;
+    padding: 0px 80px;
 }
+
+/* Nav section */
 
 .nav-container {
-    background-color: white;
     width: 100%;
-    padding: 40px 0px;
-    margin-bottom: 30px;
+    height: 100px;
+    background-color: #fff;
+    /*position: fixed;*/
 }
 
-.nav-links, ul, li {
-    display: inline;
+nav {
     float: right;
-    padding: 0px 0px 0px 10px 
+    position: relative;
+    bottom: 18px;
 }
 
-.reorder {
-    float: left;
+nav, a {
+    padding: 0px 5px;
+    text-decoration: none;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    color: #919191;
+}
+
+.nav-container nav a:hover {
+    color: #616161;
+}
+
+#border {
+    border-left: 1px solid #bcbcbc;
+    border-right: 1px solid #bcbcbc;
 }
 
 .logotype {
-    float: left;
+    width: 200px;
+    text-align: center;
+    padding: 20px 10px;
+    background-color: #4eaaa4;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 700;
+    font-family: Georgia, Times, Times New Roman, serif;
+    position: relative;
+    top: 18px;
 }
 
-.self-portrait {
-    width: 200px;
-    border-radius: 10px;
+/* Content section */
+
+.content-container {
+    margin-top: 30px;
 }
 
 .main-card {
-    background-color: white;
-    width: 630px;
-    padding: 10px;
+    background-color: #ebebeb;
+    padding: 20px;
+    width: 610px;
     float: left;
 }
 
-.side-card {
-    background-color: white;
-    width: 260px;
-    padding: 5px;
+.main-card h2 {
+    font-family: Georgia, Times, Times New Roman, serif;
+    color: #4eaaa4;
+    font-size: 25px;
+    font-weight: 700;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 3px solid #919191;
+}
+
+.main-card img {
+    width: 25%;
+    padding-right: 10px;
+}
+
+.main-card p {
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    line-height: 1.5em;
+    color: #919191;
+}
+
+/* Portfolio Section */
+
+#portfolio-item-left {
+    display: inline-block;
+    width: 280px;
+    height: 280px;
+    float: left;
+    margin-bottom: 15px;
+}
+
+#portfolio-item-right {
+    display: inline-block;
+    width: 280px;
+    height: 280px;
     float: right;
-    position: absolute;
-    left: 690px
+    margin-bottom: 15px;
+}
+
+#portfolio-tag {
+    text-align: center;
+    background-color: #4eaaa4;
+    width: 280px;
+    display: inline-block;
+    position: relative;
+    right: 290px;
+    top: 200px;
+}
+
+/* Form section */
+
+form {
+    width: 610px;
+}
+
+label {
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    line-height: 1.5em;
+    color: #919191;
+}
+
+#name,
+#mail{
+    width: 600px;
+    height: 25px;
+    font-size: 12px;
+    color: #c1c1c1;
+    border: none;
+    padding: 5px 5px;
+    margin-bottom: 10px;
+}
+
+#msg {
+    width: 100%;
+    height: 250px;
+    border: 0px;
+    padding: 5px 3px;
+    margin-bottom: 10px;
+}
+
+button {
+    width: 20%;
+    padding: 10px 8px;
+    background-color: #4eaaa4;
+    color: #fff;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: 200;
+    text-decoration: none;
+    border: none;
+}
+
+/* Side bar section */
+
+.side-card {
+    background-color: #ebebeb;
+    padding: 20px;
+    float: right;
+    width: 230px;
+}
+
+.side-card h3 {
+    font-family: Georgia, Times, Times New Roman, serif;
+    font-weight: 700;
+    font-size: 15px;
+    text-align: center;
+    color: #4eaaa4;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #919191;
 }
 
 .social-icon {
-    width: 30.78%;
-    padding: 2px
+    width: 27.8%;
 }
 
-.footer-container {
+/* Footer section */
+
+.clear {
     clear: both;
-    margin-top: 30px;
-    padding: 25px;
-    background-color: lightblue;
+    height: 30px;
+}
+
+.footer {
+    clear: both;
+    background-color: #666666;
+    height: 50px;
+    border-top: 5px solid #4eaaa4;
+    width: 100%;
+}
+
+.footer p {
+    display: block;
+    color: #fff;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-weight: 200;
+    font-size: 10px;
+    text-align: center;
+    position: relative;
+    top: 22px;
 }
