--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
-html {
-    width: 960px;
-    padding: 0px 80px;
+body {
+    background-image: url(../images/topography.png);
 }
 
 /* Nav section */
@@ -10,6 +9,12 @@ html {
     height: 100px;
     background-color: #fff;
     /*position: fixed;*/
+    border-bottom: 2px solid #919191;
+}
+
+.nav-controls {
+    width: 960px;
+    margin: 0 auto;
 }
 
 nav {
@@ -18,7 +23,7 @@ nav {
     bottom: 18px;
 }
 
-nav, a {
+nav a {
     padding: 0px 5px;
     text-decoration: none;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
@@ -50,7 +55,8 @@ nav, a {
 /* Content section */
 
 .content-container {
-    margin-top: 30px;
+    width: 960px;
+    margin: 30px auto;
 }
 
 .main-card {
