--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ nav a {
     border-bottom: 3px solid #919191;
 }
 
-.main-card img {
+.main-card #self-portrait {
     width: 25%;
     padding-right: 10px;
 }
@@ -89,30 +89,35 @@ nav a {
 
 /* Portfolio Section */
 
-#portfolio-item-left {
-    display: inline-block;
+.portfolio-cell {
     width: 280px;
     height: 280px;
+    margin-bottom: 15px;
+}
+
+.cell-image {
+    width: 100%;
+}
+
+.float-left {
     float: left;
-    margin-bottom: 15px;
 }
 
-#portfolio-item-right {
-    display: inline-block;
-    width: 280px;
-    height: 280px;
+.float-right {
     float: right;
-    margin-bottom: 15px;
 }
 
-#portfolio-tag {
+.portfolio-cell h3 {
     text-align: center;
-    background-color: #4eaaa4;
-    width: 280px;
-    display: inline-block;
+    font-family: Georgia, Times, Times New Roman, serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: #fff;
     position: relative;
-    right: 290px;
-    top: 200px;
+    background-color: #4eaaa4;
+    padding: 15px 30px;
+    width: 220px;
+    bottom: 70px;
 }
 
 /* Form section */
@@ -132,7 +137,7 @@ label {
     width: 600px;
     height: 25px;
     font-size: 12px;
-    color: #c1c1c1;
+    color: #919191;
     border: none;
     padding: 5px 5px;
     margin-bottom: 10px;
@@ -144,6 +149,7 @@ label {
     border: 0px;
     padding: 5px 3px;
     margin-bottom: 10px;
+    color: #919191;
 }
 
 button {
