--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     background-image: url(../images/topography.png);
 }
@@ -57,6 +62,7 @@ nav a {
 .content-container {
     width: 960px;
     margin: 30px auto;
+    height: 100%
 }
 
 .main-card {
@@ -190,17 +196,23 @@ button {
 
 /* Footer section */
 
+
 .clear {
     clear: both;
-    height: 30px;
+    width: 100%;
+    height: 50px;
 }
 
+
 .footer {
-    clear: both;
     background-color: #666666;
     height: 50px;
     border-top: 5px solid #4eaaa4;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    
 }
 
 .footer p {
