--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     height: 100px;
     background-color: #fff;
     /*position: fixed;*/
-    border-bottom: 2px solid #919191;
+    border-bottom: 1px solid #dddddd;
 }
 
 .nav-controls {
@@ -66,7 +66,8 @@ nav a {
 }
 
 .main-card {
-    background-color: #ebebeb;
+    background-color: #fff;
+    border: 1px solid #dddddd;
     padding: 20px;
     width: 610px;
     float: left;
@@ -90,7 +91,7 @@ nav a {
 .main-card p {
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     line-height: 1.5em;
-    color: #919191;
+    color: #777;
 }
 
 /* Portfolio Section */
@@ -135,7 +136,7 @@ form {
 label {
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     line-height: 1.5em;
-    color: #919191;
+    color: #777;
 }
 
 #name,
@@ -143,16 +144,16 @@ label {
     width: 600px;
     height: 25px;
     font-size: 12px;
-    color: #919191;
-    border: none;
+    color: #777;
+    border: 1px solid #dddddd;
     padding: 5px 5px;
     margin-bottom: 10px;
 }
 
 #msg {
-    width: 100%;
+    width: 600px;
     height: 150px;
-    border: 0px;
+    border: 1px solid #dddddd;
     padding: 5px 3px;
     margin-bottom: 10px;
     color: #919191;
@@ -173,7 +174,8 @@ button {
 /* Side bar section */
 
 .side-card {
-    background-color: #ebebeb;
+    background-color: #fff;
+    border: 1px solid #dddddd;
     padding: 20px;
     float: right;
     width: 230px;
