--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,8 +192,13 @@ button {
     border-bottom: 2px solid #919191;
 }
 
+.icons-container {
+    width: 100%;
+}
+
 .social-icon {
     width: 27.8%;
+    padding: 0px 5px;
 }
 
 /* Footer section */
